--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,27 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css");
 @import url("http://fonts.webtoolhub.com/font-n17979-kruti-dev-010.aspx");
 
+@font-face {
+  font-family: 'krutiDev010';
+  src: url('./fonts/KRDEV010.TTF');
+}
+@font-face {
+  font-family: 'krutiDev040';
+  src: url('./fonts/KRDEV40.ttf');
+}
+@font-face {
+  font-family: 'krutiDev055';
+  src: url('./fonts/KRDEV055.ttf');
+}
+@font-face {
+  font-family: 'Shivaji01';
+  src: url('./fonts/Shivaji01.ttf');
+}
+@font-face {
+  font-family: 'Shivaji05';
+  src: url('./fonts/Shivaji05.ttf');
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -112,6 +133,26 @@ textarea {
 .times-roman{
   font-family: 'Times New Roman';
   font-size: 16px;
+}
+
+.krutidev010{
+  font-family: 'krutiDev010';
+}
+
+.krutidev040{
+  font-family: 'krutiDev040';
+}
+
+.krutidev055{
+  font-family: 'krutiDev055';
+}
+
+.shivaji01{
+  font-family: 'Shivaji01';
+}
+
+.shivaji05{
+  font-family: 'Shivaji05';
 }
 
 .font-underline {
