--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 
 @font-face {
   font-family: 'krutiDev010';
-  src: url('./fonts/KRDEV010.TTF');
+  src: url('./fonts/k010.TTF');
 }
 @font-face {
   font-family: 'krutiDev040';
-  src: url('./fonts/KRDEV40.ttf');
+  src: url('./fonts/Krutidev_040_bold.TTF');
 }
 @font-face {
   font-family: 'krutiDev055';
-  src: url('./fonts/KRDEV055.ttf');
+  src: url('./fonts/Krutidev_055.TTF');
 }
 @font-face {
   font-family: 'Shivaji01';
